# cpp_project

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak
html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  annotated.html  classNovelPrinter-members.html  classNovelPrinter.html  classes.html  dir_06bb3816b08ecfd2c68aa8442e604432.html  dir_1173bfa52966f7d5b3f58f63dfb75b0c.html  dir_118b208ddb2b80d8e82ee6cb11dbcdf5.html  dir_228881f0fcb623b33cbf49b7f768f525.html  dir_36ce51ba2d79b437eaaf775c4a1ec921.html  dir_c87680d4086f60df7b1d7be3771f47f8.html  dir_f2f747735a75f3395d069329c8cc208f.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main__novel_8cpp.html  navtree.js  novel__printer_8cpp.html  novel__printer_8h.html  novel__printer_8h_source.html
html/search/: all_0.js  all_1.js  all_5.js  all_6.js  all_7.js  classes_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  search.js  variables_1.js
include/: novel_printer.h
latex/: annotated.tex  classNovelPrinter.tex  dir_06bb3816b08ecfd2c68aa8442e604432.tex  dir_1173bfa52966f7d5b3f58f63dfb75b0c.tex  dir_118b208ddb2b80d8e82ee6cb11dbcdf5.tex  dir_228881f0fcb623b33cbf49b7f768f525.tex  dir_36ce51ba2d79b437eaaf775c4a1ec921.tex  dir_c87680d4086f60df7b1d7be3771f47f8.tex  dir_f2f747735a75f3395d069329c8cc208f.tex  files.tex  main__novel_8cpp.tex  novel__printer_8cpp.tex  novel__printer_8h.tex  refman.tex
src/: main_novel.cpp  novel_printer.cpp
